# fsm-playground

./: .gitignore  AbstractWorkflow.hs  ConcreteWorkflow.hs  Example.hs  Graph.hs  Lib.hs  README.md  TH.hs  Workflow.hs  flake.nix  fsm-playground.cabal  shell.nix
src/: AbstractWorkflow.hs  ConcreteWorkflow.hs  Example.hs  Examples.hs  Graph.hs  Info.hs  Main.hs  TH.hs  Workflow.hs
src/Workflow/: Abstract.hs  Concrete.hs  Core.hs  Graph.hs  Info.hs
src/Workflow/Abstract/: TH.hs
src/Workflow/Example/: Atm.hs  TimeRelease.hs  TrafficLight.hs  Turnstile.hs  Xyz.hs
