cabal-version: 3.6

name:    fsm-playground
version: 0.0.0.0

common common
  build-depends: base
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , aeson
    , algebraic-graphs
    , effectful-core
    , hashable
    , template-haskell
  exposed-modules:
    Examples
    Workflow
    Workflow.Abstract
    Workflow.Abstract.TH
    Workflow.Concrete
    Workflow.Graph
    Workflow.Info

executable fsm-playground
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: fsm-playground
