cabal-version: 3.6

name:    fsm-playground
version: 0.0.0.0

common common
  build-depends: base
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , aeson
    , algebraic-graphs
    , bytestring
    , containers
    , effectful
    , effectful-core
    , effectful-plugin
    , effectful-th
    , hashable
    , template-haskell
    , text
  exposed-modules:
    Workflow
    Workflow.Abstract
    Workflow.Abstract.TH
    Workflow.Core
    Workflow.Example.Atm
    Workflow.Example.TimeRelease
    Workflow.Example.TrafficLight
    Workflow.Example.Turnstile
    Workflow.Example.Xyz
    Workflow.Info

executable fsm-playground
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: fsm-playground
